// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<QuestionResult /> should render component when answer is correct 1`] = `
<div
  className="sc-bdVaJa WRZEH"
  onClick={[MockFunction]}
>
  <div
    className="sc-bwzfXH dRCBFt gatsby-image-wrapper"
    style={
      Object {
        "overflow": "hidden",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "paddingBottom": "100%",
          "width": "100%",
        }
      }
    />
    <picture>
      <source
        sizes="100 200 300"
        srcSet="asdfasdf"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="correct-base64-encoded-image"
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 0.5s",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript
      dangerouslySetInnerHTML={
        Object {
          "__html": "<picture><source srcSet=\\"asdfasdf\\" sizes=\\"100 200 300\\" /><img src=\\"correct-base64-encoded-image\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
        }
      }
    />
  </div>
</div>
`;

exports[`<QuestionResult /> should render component when answer is wrong 1`] = `
<div
  className="sc-bdVaJa WRZEH"
  onClick={[MockFunction]}
>
  <div
    className="sc-bwzfXH dRCBFt gatsby-image-wrapper"
    style={
      Object {
        "overflow": "hidden",
        "position": "relative",
      }
    }
  >
    <div
      style={
        Object {
          "paddingBottom": "100%",
          "width": "100%",
        }
      }
    />
    <picture>
      <source
        sizes="100 200 300"
        srcSet="asdfasdf"
      />
      <img
        alt=""
        onLoad={[Function]}
        src="incorrect-base64-encoded-image"
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 0.5s",
            "width": "100%",
          }
        }
      />
    </picture>
    <noscript
      dangerouslySetInnerHTML={
        Object {
          "__html": "<picture><source srcSet=\\"asdfasdf\\" sizes=\\"100 200 300\\" /><img src=\\"incorrect-base64-encoded-image\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
        }
      }
    />
  </div>
</div>
`;
